Fix overlaping issue of repeat button
Repeat button was overlaping the footer when device height was small
enough, making bottom box shadow effect not visible. Add bottom margin
to prevent it from happening.

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ hr {
 
 .repeat {
   padding: 10px;
-  margin-top: 20px;
+  margin: 20px 0;
   box-shadow: 2px 2px 2px 0px #C9C9C9;
   transition: all 0.1s ease-out;
 }
